--- a/index.html
+++ b/index.html
@@ -10,37 +10,38 @@
     <!-- Header -->
 
     <header>
-      <a href="./index.html">WebStudio</a>
-
       <!-- Navigation -->
 
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a href="">Studio</a>
           </li>
 
           <li>
-            <a href="#">Portfolio</a>
+            <a href="">Portfolio</a>
           </li>
 
           <li>
-            <a href="#">Contacts</a>
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <!-- Header contacts -->
 
-      <ul>
-        <li>
-          <a href="mail-to:info@devstudio.com">info@devstudio.com</a>
-        </li>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
 
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- Hero section -->
@@ -85,13 +86,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/pc.jpg" alt="img PC" width="360px" />
+            <img src="./images/pc.jpg" alt="img PC" width="360" />
           </li>
           <li>
-            <img src="./images/mobil.jpg" alt="img Mobile" width="360px" />
+            <img src="./images/mobil.jpg" alt="img Mobile" width="360" />
           </li>
           <li>
-            <img src="./images/app.jpg" alt="img App" width="360px" />
+            <img src="./images/app.jpg" alt="img App" width="360" />
           </li>
         </ul>
       </section>
@@ -102,22 +103,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark.jpg" alt="foto Mark" width="264px" />
+            <img src="./images/mark.jpg" alt="foto Mark" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom.jpg" alt="foto Tom" width="264px" />
+            <img src="./images/tom.jpg" alt="foto Tom" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" alt="foto Camila" width="264px" />
+            <img src="./images/camila.jpg" alt="foto Camila" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel.jpg" alt="foto Daniel" width="264px" />
+            <img src="./images/daniel.jpg" alt="foto Daniel" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
