--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price within the shortest
-              possible time./p>
+              possible time.
             </p>
           </li>
           <li>
